          Thanks to Lukas Barth
- New DOM references: annotations.count, tw.syncneeded, tw.program, tw.args,
  tw.width, tw.height, tw.version.
- The message telling you to sync now indicates how many local changes will be
  synced.
- Removed compile-time language settings and I18N.
- Workaround for alias grep=rg in fish
          Thanks to Lionel Miller.

------ current release ---------------------------

2.5.1 (2016-02-24) 8b4ae3b54b44dfbd00b96cdd6dceb8dfe7cc1ea0

- TD-104  Unrecognized taskwarrior file format
          (thanks to Jeremy John Reeder, Reg).
- TW-38   Dates in the far future give bad estimates in burndown
          (thanks to Ben Boeckel).
- TW-188  short help text
          (thanks to David Patrick).
- TW-311  Estimated completion in burndown.daily shows impossible results
          (thanks to Michele Santullo).
- TW-1313 some recurring intervals reset due time to midnight
          (thanks to James Dietrich).
- TW-1425 The 'age' format rounds in odd ways
          (thanks to Black Ops testing).
- TW-1435 Ability to sync the full history of tasks including completed ones
          (thanks to Renato Alves).
- TW-1446 Difference in how relative dates are specified in report filters since 2.3.0
          (thanks to atomicules).
- TW-1481 Unable to assign a completed task as dependency
          (thanks to Tomas Babej).
- TW-1500 Dates formatted as ".age", ".remaining", or ".countdown" often give
          blank results
          (thanks to Jeremy John Reeder).
- TW-1582 Wrong urgency for first report after reviving task with
          "mod status:pending"
- TW-1658 rc override to non-existent alternate rc quietly uses default
          (thanks to David Patrick).
- TW-1697 Inconsistent failure mode on invalid task id
          (thanks to Daniel Shahaf).
- TW-1698 tests: 'make test' should exit non-zero if tests failed
          (thanks to Daniel Shahaf).
- TW-1703 When on-modify hook is installed, some messages print UUIDs instead of
          IDs