@@ -145,6 +145,8 @@
 - Removed compile-time language settings and I18N.
 - Workaround for alias grep=rg in fish
           Thanks to Lionel Miller.
+- Do not set CMP0037 on CMake 3.11.0 and above
+          Thanks to Janik Rabe
 
 ------ current release ---------------------------
 
